Updated copy, removed a bunch of old files, updated some images

--- a/index.html
+++ b/index.html
@@ -179,17 +179,13 @@
 
 				<div class="aboutTextContainer">
 					<p data-aos="zoom-in-up" data-aos-once="true">
-						My name is Julia. I'm a game designer with a focus in gameplay and systems design. I have a little
-						over 3 years of professional indie game development and design experience.
+						Hiya! My name is Julia. I'm a game designer with a focus on gameplay and level design, currently working at Bungie on Destiny 2.
 						<br>
 						<br>
-						Since 2017, I have been working as the designer, programmer, writer, and creative director for my
-						indie project, Mirastell, which you can read more about <a class="white"
-							href='mirastellProjects/'>here</a>.
+						I've been working on games professionally since 2017, when I started building my indie game Mirastell. Since then I've had the pleasure of working with many incredible developers, primarily as a gameplay and level designer.
 						<br>
 						<br>
-						Currently, I am trying to find work in a studio with a great culture where I can find mentorship and
-						grow as a designer.
+						As a designer, I'm extremely player focused. I strongly believe that game design is an art, and that the value of what we do is found in the emotions that we can create for our players. I like to focus on experiential goals, and build systems with the exclusive aim of supporting those goals, whether that is creating a complex player story about their journey to the peak of a mountain, or the tight tactile game-feel of a well tuned assault rifle.
 					</p>
 				</div>
 			</div>
@@ -205,7 +201,7 @@
 					<p>
 						If you have any questions about my work, or want to connect, feel free to send me a message!
 						<div class="contactListContainer">
-							<a target="_blank" href="https://twitter.com/trexus183" class="black"><img width="150vw" src="images/twitter.png"></a>
+							<a target="_blank" href="https://bsky.app/profile/trexus.bsky.social" class="black"><img width="150vw" src="images/bluesky.png"></a>
 							<a target="_blank" href="mailto:Trexus183@gmail.com" class="black"><img width="150vw" src="images/email.png"></a>
 							<a target="_blank" href="https://www.linkedin.com/in/julia-condemi-111a31159/" class="black"><img width="150vw"
 									src="images/linkedin.png"></a>
