copy update revert

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						Hiya! My name is Julia. I'm a game designer with a focus on gameplay and level design, currently working at Bungie on Destiny 2.
 						<br>
 						<br>
-						I've been working on games professionally since 2017, when I started building my indie game Mirastell. Since then I've had the pleasure of working with many incredible developers, primarily as a gameplay and level designer. Currently I work at Bungie on Destiny 2.
+						I've been working on games professionally since 2017, when I started building my indie game Mirastell. Since then I've had the pleasure of working with many incredible developers, primarily as a gameplay and level designer.
 						<br>
 						<br>
 						As a designer, I'm extremely player focused. I strongly believe that game design is an art, and that the value of what we do is found in the emotions that we can create for our players. I like to focus on experiential goals, and build systems with the exclusive aim of supporting those goals, whether that is creating a complex player story about their journey to the peak of a mountain, or the tight tactile game-feel of a well tuned assault rifle.
